--- a/assets/css/styleproduct.css
+++ b/assets/css/styleproduct.css
@@ -1,5 +1,4 @@
-
-:root{
+:root {
     --putih: #fff;
     --hitam: #000;
     --warnabg: #29292960;
@@ -37,7 +36,7 @@ body {
     color: #fff;
 }
 
-.produk-box:hover {
+.carousel-item:hover {
     background-color: #ffffff;
     color: #000;
 }
@@ -74,11 +73,11 @@ body {
     transition: all ease-in-out 0.3s;
 }
 
-.produk-box:hover .produk-nama {
+.carousel-item:hover .produk-nama {
     color: var(--hitam);
 }
 
-.produk-box:hover .produk-harga {
+.carousel-item:hover .produk-harga {
     color: var(--warnaharga);
 }
 
@@ -106,4 +105,59 @@ body {
 .linkurl {
     color: var(--hitam);
     text-decoration: none;
+}
+
+.carousel-container {
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+}
+
+.carousel {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+    flex: 0 0 300px;
+    margin-right: 20px;
+    background-color: #29292960;
+    border: 1px solid #ffffff;
+    border-radius: 10%;
+    padding: 20px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.411);
+    backdrop-filter: blur(10px);
+    color: #fff;
+    transition: all ease-in-out 0.3s;
+}
+
+.carousel-item img {
+    max-width: 100%;
+    max-height: 170px;
+    object-fit: cover;
+    border-radius: 10%;
+}
+
+.carousel-controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-controls button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 20px;
+    font-family: arial, sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 10px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.carousel-controls button:hover {
+    background-color: #ff5722;
 }
